name:                Conquest-Config-gen
version:             0.1.0.0
synopsis:            config generator
description:         Please see README.md
homepage:            https://github.com/pickten/Conquest/Conquest-Config-gen#readme
license:             BSD3
license-file:        ../LICENSE
author:              pickten
maintainer:          
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable genconfig
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7 && < 1
                     , directory >= 1.2 && < 2
                     , parsec >= 3.1 && < 4
                     , mtl >= 2.2 && < 3
                     , text >= 1.2 && < 2
                     , vty >= 5.11 && < 6
                    